5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1863_2218.log
== TEST (2019-07-02 10:37:23) 
-- CODE:
from numpy import*
z = 0
mat = array(eval(input("Matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat))[1]:
		if j>i:
			z = sum(mat[i,:])
			print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:38:56) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat))[1]:
		if j>i:
			print(sum(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:43) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat))[0]:
		if j>i:
			print(sum(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:40:31) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(shape(mat)[0]):
	for j in range(shape(mat))[0]:
		if j>i:
			print(sum(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:40:44) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(sum(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:29) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(round(sum(mat[i,:]),1)
-- ERROR:
File "XXXX", line 10
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:37) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(round(sum(mat[i,:]),1)
-- ERROR:
File "XXXX", line 10
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:44) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(round(sum(mat[i,:]),1)
-- ERROR:
File "XXXX", line 10
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:57) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(sum(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:20) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(sum(mat[i,:]))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:31) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(sum(mat[i,:]))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:51) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			print(sum(mat[i,:]))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:01) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)

for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			x = sum(mat[i,:]) 
			
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:54) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))
x = shape(mat)
soma=0
for i in range(x[0]):
	for j in range(x[0]):
		if j>i:
			
			x = sum(mat[i,:]) 
			soma = soma + mat[i,j]
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:51) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat[0])):
	for j in range(shape(mat[0])):
		if j>i:
			soma = soma + mat[i,j]
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:42) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:20) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2))
	
-- ERROR:
File "XXXX", line 10
    print(round(soma),2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:26) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:52) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:51:07) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- EXECUTION TIME:
0.95447
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14 2
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.0 2
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
591.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:35) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j<i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:51:40) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j<i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- EXECUTION TIME:
0.992679
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
92 2
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
2.0 2
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
458.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:58) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:52:27) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- EXECUTION TIME:
1.08625
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14 2
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.0 2
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
591.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:52:36) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			soma = soma + mat[i,j]
print(round(soma),2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:53:34) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			soma = soma + mat[i,j]
print(round(soma))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:53:42) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			soma = soma + mat[i,j]
print(round(soma,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:54:01) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:54:09) 
-- CODE:
from numpy import*

mat = array(eval(input("Matriz: ")))

soma=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if j>i:
			soma = soma + mat[i,j]
print(round(soma,2))
	
-- EXECUTION TIME:
1.13791
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
590.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
